# json-query

./: CHANGELOG.md  LICENSE  cabal.project  json-query.cabal
.github/: check-release.sh
.github/workflows/: build-arm64-main.yaml  build-arm64-pr.yaml  build-pr.yaml  build-x64-main.yaml  build-x64-pr.yaml  build.yaml  release.yaml
src/Json/: Arrow.hs  Context.hs  Error.hs  Errors.hs  Parser.hs  Path.hs  Query.hs
test/: Arrowy.hs  DogHouse.hs  Main.hs  Monadic.hs
