cabal-version:   2.4
name:            json-query
version:         0.2.3.1
synopsis:        Kitchen sink for querying JSON
description:
  The library complements json-syntax by making available several
  common access patterns. The utilities provided by this library
  only query JSON. They do not update it.

homepage:        https://github.com/byteverse/json-query
bug-reports:     https://github.com/byteverse/json-query/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Andrew Martin
maintainer:      amartin@layer3com.com
copyright:       2020 Andrew Martin
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

library
  import:          build-settings
  exposed-modules:
    Json.Arrow
    Json.Context
    Json.Error
    Json.Errors
    Json.Parser
    Json.Path

  build-depends:
    , base                 >=4.12  && <5
    , bytebuild            >=0.3.5 && <0.4
    , bytestring           >=0.10  && <0.12
    , contiguous           >=0.6.4 && <0.7
    , json-syntax          >=0.2.2 && <0.3
    , primitive            >=0.7   && <0.10
    , primitive-unlifted   >=0.1.3 && <2.2
    , profunctors          >=5.6.2 && <5.7
    , scientific-notation  >=0.1.5 && <0.2
    , text-short           >=0.1.3 && <0.2
    , transformers         >=0.5.6 && <0.7

  hs-source-dirs:  src
  ghc-options:     -O2

test-suite test
  import:         build-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    Arrowy
    DogHouse
    Monadic

  build-depends:
    , base                 >=4.12.0.0 && <5
    , byteslice            >=0.1.3
    , bytestring
    , hspec                >=2.11.7
    , json-query
    , json-syntax
    , neat-interpolation   >=0.5.1
    , primitive
    , scientific-notation  ==0.1.6.0
    , tasty                >=1.2.3
    , tasty-hspec          >=1.2.0.4
    , tasty-hunit          >=0.10.0.2
    , text                 >=1.2
    , text-short

source-repository head
  type:     git
  location: git://github.com/byteverse/json-query.git
